[tool]
[tool.poetry]
name = "radssh"
version = "1.3.0"
description = "RadSSH Module"
license = "BSD"
keywords = ["ssh", "parallel", "paramiko"]
classifiers = ["Development Status :: 5 - Production/Stable", "Environment :: Console", "Intended Audience :: System Administrators", "Intended Audience :: Developers", "License :: OSI Approved :: BSD License", "Operating System :: POSIX", "Operating System :: Microsoft :: Windows", "Operating System :: MacOS :: MacOS X", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Topic :: System :: Shells", "Topic :: Utilities"]
homepage = "https://github.com/radssh/radssh"
authors = ["Paul Kapp <paul.kapp@risk.lexisnexis.com>"]

[tool.poetry.dependencies]
python = "*"
netaddr = "*"
paramiko = ">=2.7.0"
